# NoticIA

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  Makefile  README.md  ROADMAP_PRO.md  main.py  pyproject.toml  requirements.txt  test_5min.py  test_5min_pro.py  test_audio_carismatico.py  test_audio_limpio.py  test_audio_realista.py  test_diseno_sonoro.py  test_voces.py
docs/superpowers/plans/: 2026-05-22-ingesta-multifuente-contraste.md  2026-07-08-fase-0-fundamentos.md  2026-07-08-fase-2-cerebro-claude.md  2026-07-09-fase-3a-cadena-de-audio.md
docs/superpowers/specs/: 2026-05-22-ingesta-multifuente-contraste-design.md  2026-07-08-fase-0-fundamentos-design.md  2026-07-08-fase-2-cerebro-claude-design.md  2026-07-08-rework-roadmap.md  2026-07-09-fase-3a-cadena-de-audio-design.md
documentacion/: workflow.md
reglas/: contexto.md  instrucciones.md
scripts/: preparar.sh
src/: config.py  editor.py  generador.py  ingesta.py  locutor.py
src/noticia/: agrupador.py  cli.py  config.py  editor.py  fuentes.py  generador.py  ingesta.py  locutor.py  logging_setup.py  motor_claude.py
tests/: test_agrupador.py  test_cli.py  test_config.py  test_editor.py  test_fuentes.py  test_generador.py  test_ingesta.py  test_locutor.py  test_logging_setup.py  test_motor_claude.py  test_smoke.py
