[project]
name = "noticia"
version = "0.1.0"
description = "Podcast diario automatizado con IA"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.11",
    "groq>=0.18.0",
    "edge-tts>=6.1.12",
    "pydub>=0.25.1",
    "pydantic-settings>=2.5.2",
]

[project.scripts]
noticia = "noticia.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/noticia"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
